# staciwa-scanner

./: LICENSE  README.md  requirements.txt  setup.cfg
src/: .env  branding.py  cli.py  lighthouseApi.py  scan.py
staciwa_scan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
