[metadata]
name = staciwa-scan
version = 0.1.0
author = Paweł Staciwa
author_email = kontakt@staciwa.dev
description = CLI scanner for websites (status, CORS, Lighthouse, etc.)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pawelJava03/staciwa-cli
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    python-dotenv
    rich

[options.entry_points]
console_scripts =
    staciwa-scan = staciwa_scan.cli:main
